--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,10 @@ serde_json = {version = "1.0.108", features = []}
 colored = "2.0.4"
 thiserror = "1.0.50"
 derive_setters = "0.1.6"
+
+h2 = "0.3.21"
+hyper = { version = "0.14", features = ["full"], default-features = false }
+tokio = { version = "1.34.0", features = ["full"] }
+tokio-tungstenite = "0.20.1"
+once_cell = "1.18.0"
+
